--- a/Comienzo de juego/jugando.css
+++ b/Comienzo de juego/jugando.css
@@ -4,22 +4,32 @@ body{
     padding: 15px;
 }
 
-/*
-.container-titulo{
-}
-*/
-.titulo{
+.container-tit-img{
     display: flex;
     justify-content: center;
+    visibility: hidden;
+}
+
+.container-titulo{
+    display: grid;
+    width: 300px;
+    height: auto;
+    position: relative;
+}
+
+.titulo{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-53%,-150%);
     color: rgb(0, 0, 0);
-    visibility: hidden; /*Se coloca en invisible, se muestra con js cuando se coloca los jugadores*/
 }
 
 
 .marco-titulo{
     /*visibility: hidden;*/
-    width: 300px;
-    height: auto;
+    width: 100%;
+    height: 100%;
 }
 
 /*Ventana que aparece antes de jugar*/
@@ -193,7 +203,7 @@ form input::-webkit-inner-spin-button {
     grid-template-columns: repeat(
         auto-fill, minmax(200px,1fr)  /*Algo parecido al media query*/
     );
-    gap: 20px;
+    gap: 65px 20px;
     width: 100%;
     margin: auto;
 }
@@ -233,7 +243,7 @@ form input::-webkit-inner-spin-button {
     border-radius: 10px;
     box-sizing: border-box;
     transition: ease 0.5s;
-    position: relative;
+    
 }
 
 .marcador:hover{
@@ -261,6 +271,17 @@ form input::-webkit-inner-spin-button {
     width: 98%;
     font-size: 20px;
 }
+
+
+.ingresar_nombre_jugador::placeholder{
+    display: flex;
+    text-align: center;
+    align-items: center;
+    color: rgb(111, 107, 117);
+    font-style: italic;
+    font-size: 15px;
+}
+
 
 /*Container de los botones de inc-dec*/
 .container-botones {
