--- a/Comienzo de juego/jugando.css
+++ b/Comienzo de juego/jugando.css
@@ -31,6 +31,9 @@ body{
     width: 100%;
     height: 100%;
 }
+/*************************************************************/
+
+/************************Ventana Modal************************/
 
 /*Ventana que aparece antes de jugar*/
 .container-modal{
@@ -63,10 +66,10 @@ body{
     );
     border-radius: 10px;
     border: none;
-    padding: 10px;
+    padding: 8px;
     height: 45%;
     min-height: 240px; /*Ponemos el limite de lo que se puede achicar el alto del modal*/
-    width: 80%; /* o un valor fijo como 600px */
+    width: 100%; /* o un valor fijo como 600px */
     max-width: 600px; /* Para asegurarte de que no sea más ancho que 600px */
     display: flex;
     flex-direction: column;
@@ -93,8 +96,8 @@ body{
     text-decoration: none;
     color: rgb(245, 240, 240);
     padding: 8px;
-    margin: 10px;
-    margin-bottom: 40px;
+    margin: 8px;
+    margin-bottom: 30px;
     border-radius: 10px;
     cursor: pointer;
     transition: ease 0.5s;
@@ -117,14 +120,10 @@ body{
     background-color: rgb(184, 60, 173);
 }
 
-.modal .antes-de-comenzar{
-    margin-top: 40px;
-}
-
 form input{
     width: 50%;
     background: rgb(207, 207, 207);
-    margin: 40px;
+    margin: 20px;
     margin-bottom: 10px;
     padding: 12px;
     border: none;
@@ -138,6 +137,11 @@ form input::-webkit-outer-spin-button,
 form input::-webkit-inner-spin-button {
     -webkit-appearance: none; /* Chrome y Safari */
     margin: 0; /* Quitar margen */
+}
+
+.texto-jugadores{
+    color: aliceblue;
+    text-align: center;
 }
 
 .container-cant-jugadores{
