--- a/Comienzo_de_juego/chancho.css
+++ b/Comienzo_de_juego/chancho.css
@@ -5,7 +5,7 @@ body {
     flex-direction: column;
     background-color: #f0f0f0;
     font-family: Arial, sans-serif;
-    background-image: url(../imagenes/fondito.jpeg);
+    background-image: url(../imagenes/fondito.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
