--- a/Instrucciones/Instrucciones.css
+++ b/Instrucciones/Instrucciones.css
@@ -1,7 +1,7 @@
 body{
     margin: 0;
     padding: 0;
-    background-image: url(../imagenes/Fondo-azul.jpg);
+    background-image: url(../imagenes/Fondo-azul.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
