--- a/Comienzo_de_juego/jugando.css
+++ b/Comienzo_de_juego/jugando.css
@@ -11,6 +11,7 @@ body{
 .container-tit-img{
     display: flex;
     justify-content: center;
+    margin-bottom: 25px;
 }
 
 .container-titulo{
@@ -29,7 +30,6 @@ body{
 }
 
 .marco-titulo{
-    /*visibility: hidden;*/
     width: 100%;
     height: 100%;
 }
@@ -37,49 +37,14 @@ body{
 
 /**************ELEMENTOS DEL JUEGO**************/
 
-.botones-inc-dec{
-    border: none;
-    border-radius: 100%;
-    width: 40px;
-    height: 40px;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin: 5px;
-    transition: ease 0.5s;
-}
 
-.container{
-    display: grid;
-    place-items: center;
-    grid-template-columns: repeat(
-        auto-fill, minmax(200px,1fr)  /*Algo parecido al media query*/
-    );
-    gap: 65px 20px;
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 50px 80px;
     width: 100%;
     margin: auto;
-}
-
-.boton-incremento{
-    background: rgb(9, 202, 9);
-    color: white;
-    font-size: 30px;
-}
-
-.boton-decremento{
-    background-color: red;
-    font-size: 40px;
-    color: white;
-}
-
-.boton-incremento:hover{
-    background: rgb(10, 163, 10);
-}
-
-.boton-decremento:hover{
-    background-color: rgb(212, 23, 23);
 }
 
 .marcador {
@@ -104,7 +69,22 @@ body{
     box-shadow: 2px 2px 14px rgb(219, 20, 143);
 }
 
+/*Estilo del marcador cuando el jugador esté eliminado*/
+.marcador.eliminado {
+    background: -webkit-linear-gradient(to right, #93291E, #ED213A);  
+    background: linear-gradient(to right, #93291E, #ED213A); 
+    outline: 3px solid rgb(143, 25, 16);
+    color: white; 
+    box-shadow: 0 0 10px rgba(143, 25, 16, 0.7); 
+    transition: background 0.5s, color 0.3s, box-shadow 0.5s ease;
+}
 
+.marcador.eliminado:hover{
+    box-shadow: 6px 6px 20px rgb(211, 15, 15);
+}
+
+
+/*Es el input donde se ingresa el nombre del jugador en el marcador*/
 .ingresar_nombre_jugador {
     display: flex;
     justify-content: center;
@@ -132,6 +112,9 @@ body{
     font-size: 15px;
 }
 
+.marcador.eliminado .ingresar_nombre_jugador {
+    outline: 3px solid rgb(143, 25, 16);
+}
 
 /*Container de los botones de inc-dec*/
 .container-botones {
@@ -140,10 +123,44 @@ body{
     position: absolute;
     right: 1px; /* Alineación a la derecha */
     top: 40%; /* Centrado vertical */
-    transform: translate(50%, 25%);
+    transform: translate(50%, 15%);
 
 }
 
+.botones-inc-dec{
+    border: 2px solid white;
+    border-radius: 100%;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 5px;
+    transition: ease 0.5s;
+}
+
+.boton-incremento{
+    background: rgb(9, 202, 9);
+    color: white;
+    font-size: 30px;
+}
+
+.boton-decremento{
+    background-color: red;
+    font-size: 40px;
+    color: white;
+}
+
+.boton-incremento:hover{
+    background: rgb(10, 163, 10);
+}
+
+.boton-decremento:hover{
+    background-color: rgb(212, 23, 23);
+}
+/*****************/
 .boton_y_palabra {
     display: flex;
     flex-direction: column; /* Apilar la palabra encima de los botones */
@@ -174,6 +191,12 @@ body{
     background-color: #b91d73;
     color: white;
     box-shadow: 0 0 5px rgb(219, 20, 143);
+}
+
+/*Casillero de la palabra CHANCHO cuando esté completa*/
+.marcador.eliminado .casillero-palabra{
+    background: rgb(201, 14, 14);
+    outline-color: rgb(143, 25, 16);
 }
 
 /*Boton de volver*/
