--- a/Comienzo_de_juego/jugando.css
+++ b/Comienzo_de_juego/jugando.css
@@ -1,7 +1,7 @@
 body{   
     font-family: Arial, Helvetica, sans-serif;
     padding: 15px;
-    background-image: url(/imagenes/fondo.png);
+    background-image: url(../imagenes/fondo.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
